# Axiom

./: .deployignore  .dockerignore  .env.example  .gitattributes  .gitignore  .replit  CLAUDE.md  Dockerfile  FIX_SIGNUP_ERROR.md  ai_assistant.py  alembic.ini  app.py  axiom_dev.db  check_db_users.py  data_cleaner.py  data_modelling.py  docker-compose.yml  email_service.py  generate_plan_pdf.py  inspect_db.py  knowledge_base.py  models.py  my_changes.diff  nixpacks.toml  package-lock.json  package.json  predictions.py  proactive_questions.py  pyproject.toml  railway.toml  replit.md  replit.nix  requirements-backend.txt  requirements.txt  semantic_model.py  test_data.csv  transforms.py  vercel.json  visualizations.py
.agents/: agent_assets_metadata.toml  data_analyst
.streamlit/: config.toml
alembic/: env.py
attached_assets/: Axiom_1_1777041545507.make  Pasted---1777075524066_1777075524067.txt  Pasted---1777755237134_1777755237135.txt  Pasted---1777835663029_1777835663030.txt  Pasted--1-Skeleton-Loading-Visual--1777078355915_1777078355916.txt  Pasted--159-Axiom--1777078757434_1777078757435.txt  Pasted--201-Axiom-Tahleel-Predictive-Engine-Integration-What-W_1777158434435.txt  Pasted--212-Axiom--1777158795435_1777158795435.txt  Pasted--Act-as-a-Senior-Full-Stack-Engineer-and-Software-Archi_1777047369911.txt  Pasted--Agent--1777825968511_1777825968512.txt  Pasted--Axiom--1777176797266_1777176797266.txt  Pasted--Data-Analysis-Report-1-Key-Observations-Applicant-Age-_1768703779190.txt  Pasted--Deploy--1777803544455_1777803544456.txt  Pasted--Expert-Guide-1777078926936_1777078926936.txt  Pasted--Expert-Mode-Guided-Mode-Axiom--1777078917390_1777078917390.txt  Pasted--Landing--1777078506232_1777078506233.txt  Pasted--Senior-Level-Tahleel-BI-1777158926278_1777158926278.txt  Pasted--mode-Guided-UI--1777807337236_1777807337237.txt  Pasted-Add-complete-frontend-and-E2E-test-coverage-to-Axiom-Th_1777176053576.txt  Pasted-Add-i18n-next-intl-EN-default-AR-dynamic-RTL-LTR-What-W_1777761540646.txt  Pasted-Analyze-the-Axiom-codebase-architecture-and-identify-th_1777177606594.txt  Pasted-Apply-the-following-9-performance-quick-wins-to-Axiom-D_1777180544332.txt  acdoca_dirty_1200_rows_1777196337943.csv  (+28 more)
backend/: _json.py  (+32 more)
(+376 files in other folders)
