[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "bcrypt>=5.0.0",
    "bleach>=6.3.0",
    "extra-streamlit-components>=0.1.81",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "python-bidi>=0.6.7",
    "pyyaml>=6.0.3",
    "replit>=4.1.2",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "resend>=2.21.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.53.0",
]
