[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "extra-streamlit-components>=0.1.81",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.10.2",
    "python-bidi>=0.6.7",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "replit>=4.1.2",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "resend>=2.21.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.53.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
